--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -46,6 +46,7 @@ en:
   dashboard_help_text: "Welcome to Loomio!\n This is the Home page, where you can see a list of the discussions going on in all of your groups. To the right is a list of the groups you are a member of. You can start a discussion on a new topic by clicking on the “Start a discussion” button.\n\n If you have any questions or feedback we’d love to hear from you: %{link}\n\n"
 
   notifications:
+    header: "Notifications"
     new_discussion: "started a new discussion"
     new_motion: "created a new proposal"
     motion_closed:
@@ -59,6 +60,76 @@ en:
     user_added_to_group: "added you to the group"
     motion_closing_soon: "Proposal is closing soon"
     motion_blocked: "blocked the proposal"
+
+  edit_model_info: "Edit %{which_model} info"
+  request_new_group: "+ Request New Group"
+
+  #
+  # GROUP PAGE
+  #
+
+  add_new_member: 'Add new member'
+  invite_members_to_group: "Invite members to %{which_group}"
+  remaining_invites: "remaining invites"
+  need_more_invites_html: "Need more? Loomio is in closed beta, which means we're still in development and have limited resources for user support. If you'd like to increase the size of your group %{href} and we'll see what we can do."
+  get_in_touch_link: "get in touch"
+
+  email_members_in_group: "Email the members in %{which_group}"
+  subject_error: "Please fill in a subject"
+  subject_placeholder: "Write a subject"
+  message_error: "Please fill in a message"
+  message_placeholder: "Write a message to the members of %{which_group}."
+
+  email_group_members: "Email group members"
+  edit_group_settings: "Edit group settings"
+  leave_group: "Leave group"
+  confirm_leave_group: "Are you sure you wish to leave %{which_group}?"
+  deactivate_group: "De-activate group"
+  confirm_deactivate_group: "Wait!!! Are you sure you want to de-activate %{which_group}? You will no longer be able to view the group. However, if you wish to get the group back you can ask us to reactivate it for you by sending an email to contact@loomio.org."
+
+  invited_users: "Invited members"
+  members: "Members"
+  confirm_remove_user: "Are you sure you wish to remove %{which_user} from the group?"
+  remove_admin: "Remove admin"
+  confirm_remove_admin: "Are you sure you no longer want %{which_user} to be an admin for this group?"
+  make_admin: "Make admin"
+  confirm_make_admin: "Are you sure you want to make %{which_user} an admin for this group?"
+
+  membership_requests: "Membership requests"
+  confirm_approve_membership_request: "Are you sure you want to add %{which_user} to the group?"
+  ignore_request: "Ignore request"
+  confirm_ignore_membership_request: "Are you sure you want to ignore the member request from %{which_user}?"
+  membership_requested: "Membership Requested"
+  request_membership: "Request membership"
+  confirm_remove_membership_request: "Are you sure you wish to withdraw your membership request for this group?"
+
+  subgroups: "Sub-groups"
+  create_a_subgroup: "Create a sub-group"
+  select_members_to_add: "Select members to add to %{which_group}"
+  empty_parent_group: "No parent group members exist to add. Please add the members to the parent group first."
+  invite_members: "Invite members"
+  new_subgroup: "New sub-group"
+  create_subgroup: "Create sub-group"
+  creating_subgroup: "Creating sub-group"
+
+  group_privacy: "Privacy: '%{who}' can see this group."
+  everyone: "Everyone"
+  parent_group_members: "Parent group members"
+  members: "Members"
+
+  new_group: "New group"
+  create_group: "Create group"
+  creating_group: "Creating group"
+  edit_group: "Edit Group"
+  update_group: "Update group"
+  updating_group: "updating_group"
+
+  group_not_found: "Group not found."
+  group_not_found_details: "This group might be private. If someone gave you this link, they may need to invite you to one of their groups so that you can see this page."
+
+  start_a_discussion: "Start a discussion"
+  group_description: "Group description"
+
 
   #
   # DISCUSSION PAGE
@@ -79,6 +150,7 @@ en:
   previous_decisions: "Previous decisions"
   create_new_proposal: "Create new proposal"
   empty_decision_list: "There is not currently an open proposal under discussion"
+  empty_decision_index: "This group has not made any decisions yet."
   empty_discussion_list: "There isn't any activity in this discussion yet."
 
   discussion_context:
@@ -100,45 +172,114 @@ en:
   comment_form_placeholder: "Say something..."
   comment_form_submit_button: "Post comment"
 
+  liked_by: "Liked by %{who}"
+  delete_comment: "Delete comment"
+  confirm_delete_comment: "Are you sure you want to delete this comment?"
+  confirm_delete_commenta: "Are you sure you want to delete this comment?"
+
   markdown_settings_more_info: "More info..."
   edit_discussion_title: "Edit discussion title"
   delete_discussion: "Delete discussion"
-  confirm_delete: "Are you sure you want to permanently delete this discussion?"
+  confirm_delete_discussion: "Are you sure you want to permanently delete this discussion?"
 
   #
-  # COMMON WORDS
+  # DECISIONS / PROPOSALS / MOTIONS
   #
 
-  close: "Close"
-  by: "By"
-  ago: "ago"
-  enable: "Enable"
-  disable: "Disable"
-  save: "Save"
-  saving: "Saving"
-  cancel: "Cancel"
+  new_proposal: "New Proposal"
+
+  close_proposal: "Close proposal"
+  confirm_close_proposal: "Are you sure you want to close this proposal?"
+  change_proposal_close_date: "Change close date"
+  change_proposal_close_date_header: "Change the close date for the proposal '%{which}'"
+  proposal_close_date_error: "Please give a future close date"
+  proposal_closing_when: "Closing in %{when}"
+  proposal_closed_when: "Closed %{when} ago"
+  proposed_when_by_who: "Proposed %{when} ago by %{who}"
+  engagement_on_open_proposal: "%{percent}% of members have stated their position (%{numerator}/%{denominator})"
+  engagement_on_closed_proposal: "%{percent}% of members stated their position (%{numerator}/%{denominator})"
+
+  state_your_position: "State your position"
+  positions: "Positions"
+  yes_position: "I agree"
+  yes_details: "I agree with this and want it to go ahead."
+  abstain_position: "I abstain"
+  abstain_details: "I am happy with what the group decides without me."
+  no_position: "I disagree"
+  no_details: "I think we can do better, but if the rest of the group feels like it’s the best course of action then I’m OK with it going ahead."
+  block_position: "I block"
+  block_details: "I have strong objections to this proposal and am not OK with it going ahead."
+  not_voted: "[Show users who have not yet decided]"
+  outcome: "Outcome"
+  outcome_placeholder: "What was the outcome of this proposal?"
 
   #
   # FORMS
   #
 
   discussion_form:
-    start_discussion: "Start a discussion"
+    header: "Start a discussion"
     who: "Which group would you like to engage in this discussion?"
     context: "Context"
-    starting: "Starting..."
+
+  motion_form:
+    header: "New proposal"
+    name_helper: "Make the title as clear and succinct as possible so people know exactly what it means when they agree or disagree with your proposal."
 
   simple_form:
     labels:
       discussion:
         title: "Title"
         description: "Context"
+      motion:
+        name: "Title"
+        description: "Details"
     placeholders:
       discussion:
         title: "What is the topic you'd like to discuss?"
         description: "This information will appear at the top of the discussion page. Introduce the topic and give enough context for your group to have a well-informed discussion."
+      motion:
+        name: "What is your proposed course of action?"
+        description: "Give enough information so that anyone in your group can make a well-informed decision."
 
   helpers:
     submit:
       discussion:
         create: "Start discussion"
+      motion:
+        create: "Start proposal"
+
+  #
+  # COMMON WORDS
+  #
+
+  ago: "ago"
+  approve: "Approve"
+  by: "By"
+  cancel: "Cancel"
+  change: "Change"
+  changing: "Changing"
+  close: "Close"
+  closing: "Closing"
+  closed: "Closed"
+  delete: "Delete"
+  edit: "Edit"
+  email_address: "Email address"
+  enable: "Enable"
+  disable: "Disable"
+  groups: "Groups"
+  group_admin: "Group Admin"
+  home: "Home"
+  like: "Like"
+  loading: "Loading..."
+  message: "Message"
+  options: "Options"
+  save: "Save"
+  saving: "Saving"
+  sending: "Sending"
+  send_invite: "Send invite"
+  send_email: "Send email"
+  show_more: "Show More"
+  starting: "Starting"
+  subject: "Subject"
+  unlike: "Unlike"
