--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -44,6 +44,7 @@ es:
   dashboard_help_text: "¡Bienvenido/a a Loomio!\n Esta es la página de Inicio, donde podrás ver una lista de las discusiones activas de todos tus grupos. A la derecha hay una lista de los grupos de los que eres miembro. Puedes iniciar una discusión en una tema nuevo cliqueando el botón 'Iniciar una discusión'.\n\n Si tienes alguna pregunta o contribución nos encantaría escucharla: %{link}\n\n"
 
   notifications:
+    header: "Notificaciones"
     new_discussion: "abrió una propuesta"
     new_motion: "creó una nueva propuesta"
     motion_closed:
@@ -67,3 +68,287 @@ es:
     motion_close_date_edited: "cambió la fecha de cierre de la propuesta"
     discussion_title_edited: "cambió el título de la discusión"
     discussion_description_edited: "cambió la descripción de la discusión"
+    
+  edit_model_info: "Editar %{which_model} informacion"
+  request_new_group: "Pedir ingreso a nuevo grupo"
+  request_new_group_details: "o esperar a ser invitado."
+  empty_notifications: "Todavia no tienes notificaciones."
+  see_all_notifications: "Ver todas las notificaciones"
+  user_settings: "Configuracion de Usarios"
+  email_preferences: "Preferencias de correo electronico"
+  sign_out: "Salir"
+  feedback: "Dejanos tus comentarios"
+  sign_in: "Entrar"
+  sign_in_details: "Para aprticipar. No estas conectado."
+  tagline: "Creando un mundo donde es facil para todos participar de las decisiones que nos afectan."
+
+  not_found: "no se econtro"
+  not_found_details: "Lo %{item} que estas tratando de acceder no existe. Pudo haber sido borrado." 
+  click_to_dismiss: "Presione aqui para deshacerse de este  mensaje"
+  generic_confirm: "Estas seguro?"
+
+  #
+  # GROUP PAGE
+  #
+
+  add_new_member: 'Adherir un nuevo miembro'
+  invite_members_to_group: "Invitar miembros a  %{which_group}"
+  remaining_invites: "quedan invitaciones"
+  need_more_invites_html: "Necesitas más? Loomio se encuentra en fase beta lo cual significa que todavía esta en desarollo y contamos con pocos recursos para apoyo al usuario. Si te gustaria expandir tu grupo %{href} y veremos como te podemos ayudar"
+  get_in_touch_link: "Ponte en contacto"
+
+  email_members_in_group: "Mandar correo electronico a los miembros de %{which_group}"
+  subject_error: "Porfavor escrbibe un titulo"
+  subject_placeholder: "Escribe un titulo"
+  message_error: "Porfavor escriba su mensaje"
+  message_placeholder: "Escribir un mensaje a los miebros de %{which_group}."
+
+  email_group_members: "Enviar correo electronico a los miembros del grupo"
+  edit_group_settings: "Editar preferencias del grupo"
+  leave_group: "Abandonar el grupo"
+  confirm_leave_group: "Estas seguro que deseas abandonar el grupo %{which_group}?"
+  deactivate_group: "Desactivar grupo"
+  confirm_deactivate_group: "Espera!!! Estas seguro que deseas desactivar %{which_group}? Ya no podras ver el grupo. De todos modos, Si deseas reactivarlo envíanos un correo electronico a contact@loomio.org."
+
+  invited_users: "Miembros invitados"
+  members: "Miembros"
+  confirm_remove_user: "Estas seguro que deseas remover %{which_user} del grupo?"
+  remove_admin: "Remover status de administrador"
+  confirm_remove_admin: "Are you sure you no longer want %{which_user} to be an admin for this group?"
+  make_admin: "Make admin"
+  confirm_make_admin: "Are you sure you want to make %{which_user} an admin for this group?"
+
+  membership_requests: "Membership requests"
+  confirm_approve_membership_request: "Are you sure you want to add %{which_user} to the group?"
+  ignore_request: "Ignore request"
+  confirm_ignore_membership_request: "Are you sure you want to ignore the member request from %{which_user}?"
+  membership_requested: "Membership Requested"
+  request_membership: "Request membership"
+  confirm_remove_membership_request: "Are you sure you wish to withdraw your membership request for this group?"
+
+  subgroups: "Sub-groups"
+  create_a_subgroup: "Create a sub-group"
+  select_members_to_add: "Select members to add to %{which_group}"
+  empty_parent_group: "No parent group members exist to add. Please add the members to the parent group first."
+  invite_members: "Invite members"
+  new_subgroup: "New sub-group"
+  create_subgroup: "Create sub-group"
+  creating_subgroup: "Creating sub-group"
+
+  group_privacy: "Privacy: '%{who}' can see this group."
+  everyone: "Everyone"
+  parent_group_members: "Parent group members"
+  members: "Members"
+
+  new_group: "New group"
+  create_group: "Create group"
+  creating_group: "Creating group"
+  edit_group: "Edit Group"
+  update_group: "Update group"
+  updating_group: "updating_group"
+
+  group_not_found: "Group not found."
+  group_not_found_details: "This group might be private. If someone gave you this link, they may need to invite you to one of their groups so that you can see this page."
+
+  start_a_discussion: "Start a discussion"
+  group_description: "Group description"
+
+
+  #
+  # DISCUSSION PAGE
+  #
+
+  discussion_items:
+    new_discussion: "created the discussion"
+    new_motion: "created a proposal"
+    motion_closed:
+      by_user: "closed the proposal"
+      by_expirey: "Proposal closed"
+    motion_close_date_edited: "changed the closing date for the proposal"
+    discussion_title_edited: "changed the discussion title"
+    discussion_description_edited: "changed the discussion description"
+
+  discussion: "Discussion"
+  current_decision: "Current decision"
+  previous_decisions: "Previous decisions"
+  see_previous_decisions: "See previous decisions"
+  create_new_proposal: "Create new proposal"
+  empty_decision_list: "There is not currently an open proposal under discussion"
+  empty_decision_index: "This group has not made any decisions yet."
+  empty_discussion_list: "There isn't any activity in this discussion yet."
+  empty_discussion_index: "There are no discussions in any of your groups"
+  empty_discussion_index_group: "This group does not have any discussions yet."
+
+  discussion_context:
+    started_when: "Started %{when} ago"
+    helper_text: "Use this panel to give enough context for your group to have a well-informed discussion. As the discussion progresses, anyone can add information to make it easy for new people to get up to speed."
+    last_edited: "Last edited about %{when} ago by "
+    see_revision_history: "See revision history"
+
+  description_history:
+    header: "Revision history"
+    subheader: "Version"
+    edited_by: "Edited about %{when} ago by %{who}"
+    current: "(current)"
+    restore: "(Restore this version)"
+    applying_changes: "(Applying changes...)"
+    previous: "Prev"
+    next: "Next"
+
+  comment_form_placeholder: "Say something..."
+  comment_form_submit_button: "Post comment"
+
+  liked_by: "Liked by %{who}"
+  delete_comment: "Delete comment"
+  confirm_delete_comment: "Are you sure you want to delete this comment?"
+  confirm_delete_commenta: "Are you sure you want to delete this comment?"
+
+  markdown_settings_more_info: "More info..."
+  edit_discussion_title: "Edit discussion title"
+  delete_discussion: "Delete discussion"
+  confirm_delete_discussion: "Are you sure you want to permanently delete this discussion?"
+
+  #
+  # DECISIONS / PROPOSALS / MOTIONS
+  #
+
+  new_proposal: "New Proposal"
+
+  close_proposal: "Close proposal"
+  confirm_close_proposal: "Are you sure you want to close this proposal?"
+  change_proposal_close_date: "Change close date"
+  change_proposal_close_date_header: "Change the close date for the proposal '%{which}'"
+  proposal_close_date_error: "Please give a future close date"
+  proposal_closing_when: "Closing in %{when}"
+  proposal_closed_when: "Closed %{when} ago"
+  proposed_when_by_who: "Proposed %{when} ago by %{who}"
+  engagement_on_open_proposal: "%{percent}% of members have stated their position (%{numerator}/%{denominator})"
+  engagement_on_closed_proposal: "%{percent}% of members stated their position (%{numerator}/%{denominator})"
+
+  state_your_position: "State your position"
+  positions: "Positions"
+  yes_position: "I agree"
+  yes_details: "I agree with this and want it to go ahead."
+  abstain_position: "I abstain"
+  abstain_details: "I am happy with what the group decides without me."
+  no_position: "I disagree"
+  no_details: "I think we can do better, but if the rest of the group feels like it’s the best course of action then I’m OK with it going ahead."
+  block_position: "I block"
+  block_details: "I have strong objections to this proposal and am not OK with it going ahead."
+  not_voted: "[Show users who have not yet decided]"
+  outcome: "Outcome"
+  outcome_placeholder: "What was the outcome of this proposal?"
+
+  #
+  # SIGN IN
+  #
+
+  resend_confirmation: "Resend confirmation instructions"
+  new_password: "New password"
+  confirm_new_password: "Confirm new password"
+  change_your_password: "Change your password"
+  change_my_password: "Change my password"
+  send_password_reset: "Send me reset password instructions"
+  blank_details: "(leave blank if you don't want to change it)"
+  password_confirmation: "Password confirmation"
+  current_password: "Current password"
+  password_details: "(we need your current password to confirm your changes)"
+  cancel_my_account: "Cancel my account"
+  remember_me: "Remember me"
+  signing_in: "Signing in"
+  dont_have_account: "Don't have an account?"
+  closed_beta: "We're currently in closed testing and not accepting public sign-ups (yet!)."
+  closed_beta_details: "If you belong to a group that is using Loomio but you don't have your own Loomio account, please contact the person in your organization who set up Loomio and ask them to add you to the group."
+  forgot_your_password: "Forgot your password?"
+  confirmation_not_received: "Didn't receive confirmation instructions?"
+  unlock_not_received: "Didn't receive unlock instructions?"
+
+  #
+  # FORMS
+  #
+
+  discussion_form:
+    header: "Start a discussion"
+    who: "Which group would you like to engage in this discussion?"
+    context: "Context"
+
+  motion_form:
+    header: "New proposal"
+    name_helper: "Make the title as clear and succinct as possible so people know exactly what it means when they agree or disagree with your proposal."
+
+  group_form:
+    privacy_settings: "Privacy Settings"
+    everyone_details: "Public - anyone with the link can see this %{group_or_subgroup}"
+    members_details: "Members - only members of this %{group_or_subgroup} can see it"
+    parent_group_members_details: "Parent group members - only members of the main group can view this sub-group"
+    invitation_settings: "Invitation Settings"
+    all_group_members: "All %{group_or_subgroup} members"
+    admins_only: "Admins only"
+
+  simple_form:
+    labels:
+      discussion:
+        title: "Title"
+        description: "Context"
+      motion:
+        name: "Title"
+        description: "Details"
+      group:
+        name: "Group Name"
+        viewable_by: "Who can see this %{group_or_subgroup}?"
+        invitable_by: "Who can invite members to this %{group_or_subgroup}?"
+    placeholders:
+      discussion:
+        title: "What is the topic you'd like to discuss?"
+        description: "This information will appear at the top of the discussion page. Introduce the topic and give enough context for your group to have a well-informed discussion."
+      motion:
+        name: "What is your proposed course of action?"
+        description: "Give enough information so that anyone in your group can make a well-informed decision."
+
+  helpers:
+    submit:
+      discussion:
+        create: "Start discussion"
+      motion:
+        create: "Start proposal"
+
+  #
+  # COMMON WORDS
+  #
+
+  ago: "ago"
+  approve: "Approve"
+  back: "Back"
+  by: "By"
+  cancel: "Cancel"
+  change: "Change"
+  changing: "Changing"
+  close: "Close"
+  closing: "Closing"
+  closed: "Closed"
+  delete: "Delete"
+  edit: "Edit"
+  email_address: "Email address"
+  enable: "Enable"
+  engagement: "Engagement"
+  disable: "Disable"
+  groups: "Groups"
+  group_admin: "Group Admin"
+  home: "Home"
+  like: "Like"
+  loading: "Loading..."
+  message: "Message"
+  new_activity: "New activity"
+  password: "Password"
+  options: "Options"
+  save: "Save"
+  saving: "Saving"
+  sending: "Sending"
+  send_invite: "Send invite"
+  send_email: "Send email"
+  show_more: "Show More"
+  starting: "Starting"
+  subject: "Subject"
+  unlike: "Unlike"
+  until_close: "until close"
+  update: "Update"
