--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -405,7 +405,7 @@ en:
       motion_description: "Please fill in the motion description"
       motion_closing_inputs: "Please give a future close date"
       admin_email: "Please fill in the an administrator email address"
-      recipients: "Please fill in the invited email addresse(s)"
+      invitees: "Please fill in the invited email addresse(s)"
       message_body: "Please fill in the invite body"
 
   simple_form:
