--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,7 +20,12 @@ en:
     permission_to_invite: "You do not have permission to invite new members."
     position_not_updated: "Could not update position."
     settings_not_updated: "Your settings did not get updated."
-  alert:
+    group_request_already_verified: "Sorry! This invitation is invalid or has already been verified."
+    group_request_already_accepted: "Sorry! This invitation is invalid or has already been accepted."
+    group_request_invalid_token: "Sorry! This is an invalid token"
+    group_private_or_not_found: "Group not found. \n\nThis group might be private. If someone gave you this link, ask them to invite you to the group."
+    group_already_setup: "The group you are trying to setup, already exists."
+    not_permitted_to_setup_group: "You do not have permission to setup this group."
     duplicate_email: "%{which_email} is already in the group."
   notice:
     admin_rights_removed: "%{which_user}'s admin rights have been removed."
@@ -191,9 +196,6 @@ en:
   edit_group: "Edit Group"
   update_group: "Update group"
   updating_group: "Updating group"
-
-  group_not_found: "Group not found."
-  group_not_found_details: "This group might be private. If someone gave you this link, ask them to invite you to the group."
 
   start_a_discussion: "Start a discussion"
   group_description: "Group description"
