--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -25,7 +25,7 @@ en:
     group_request_already_accepted: "Sorry! This invitation is invalid or has already been accepted."
     group_request_invalid_token: "Sorry! This is an invalid token"
     group_private_or_not_found: "Group not found. \n\nThis group might be private. If someone gave you this link, ask them to invite you to the group."
-    group_already_setup: "The group you are trying to setup, already exists."
+    group_already_setup: "The group you are trying to setup already exists."
     not_permitted_to_setup_group: "You do not have permission to setup this group."
     duplicate_email: "%{which_email} is already in the group."
     not_found: "%{item} not found\n\nIt may have been deleted."
@@ -313,7 +313,10 @@ en:
   # INVITATIONS
   #
 
-  invitation_to_join_group:
+  invitation:
+    invites_header: "Invite your group members"
+    recipients: "Enter email addresses, seperated by commas:"
+    invitees_placeholder: "User Name <user1@example.com>, user2@example.com"
     subject: "Your invitation to participate in the %{group} on Loomio"
     body_editable: "I've just set up our group to make decisions onine using a new tool called Loomio. It will help us get stuff done without having to meet in person or drown in emails."
     body_uneditable: |
@@ -331,6 +334,12 @@ en:
       Regards,
       %{user}
       %{group}
+
+    message_body: "Invitation message"
+    invites_more_help: "You can customise the invitation your members receive, to explain what your group will be using Loomio for and why it’s worth their time to get involved."
+    invites_more_help1: "When you're ready, click 'finish setup' to send invitations and go to your brand new group!"
+    invites_more_help2: "<p>You can invite people to your group at any time.</p><p>You might want to invite all your members in right away, or you could start by inviting just the people you’re working most closely with.</p>"
+
 
   defered_email:
     subject: "defered (placeholder)"
@@ -388,20 +397,18 @@ en:
 
   group_setup_form:
     tabs:
+      intro: "Before you start"
       group: "Set up your group"
       discussion: "Start a discussion"
-      motion: "Start a decision"
       invites: "Invite your group"
     group_header: "Set up your group"
     group_settings_header: "Settings"
     group_settings_blurb: "Setting up an engaging discussion relevant to your group before inviting people in will dramatically increase the likelihood of your group succeeding in using Loomio long-term."
+    group_more_help: "<p>The first question every new member will have is <em>what is this group for?</em></p><p>Think about the simplest way you can describe the group:<ul><li>What do you want to achieve together?</li><li>What types of decisions will you be making?</li><li>Who will be involved?</li></ul>"
     discussion_header: "Set up your first discussion"
     discussion_blurb: "Setting up an engaging discussion relevant to your group before inviting people in will dramatically increase the likelihood of your group succeeding in using Loomio long-term."
-    motion_header: "Start a decision"
-    motion_blurb: "Often you’d wait for the discussion to progress for a while before making a proposal for your group to decide on. For the first discussion however, it’s a good idea to have a proposal open for everyone to participate in.\n\nA good proposal contains a plan of action for the group. Make your proposal as clear and succinct as possible so people know exactly what it means when they agree or disagree.\n\nYou can set up your first proposal here:"
-    invites_header: "Invite users"
-    invitees_placeholder: "User Name <user1@example.com>, user2@example.com"
-    invitees_label: "Recipient list (enter addresses seperated by commas)"
+    discussion_more_help: "<p>Make sure you start with a clear discussion that your group members can easily engage with, so people can jump in and start participating straight away.</p><p>Is your group already having a discussion that you could shift to Loomio?</p>"
+
     errors:
       group_name: "Please fill in the group title"
       group_description: "Please fill in the group description"
@@ -432,18 +439,12 @@ en:
         password: "Password"
         language_preference: "Language"
       group_setup:
-        group_name: "Group name"
-        group_description: "Group description"
+        group_name: "What is the name of your group?"
+        group_description: "Give a brief description of your group"
         viewable_by: "Who can see this group?"
         invitable_by: "Who can invite members to this group?"
-        discussion_name: "Discussion Name"
-        discussion_description: "Discussion description"
-        motion_name: "Motion Name"
-        motion_description: "Motion description"
-        close_at_date: "Close date"
-        admin_email: "From"
-        message_subject: "Subject"
-        message_body: "Message"
+        discussion_name: "What’s the first topic you’d like to discuss with your group?"
+        discussion_description: "Introduce the topic and give enough information to get the conversation started:"
 
     placeholders:
       discussion:
@@ -453,13 +454,11 @@ en:
         name: "What is your proposed course of action?"
         description: "Give enough information so that everyone knows exactly what it means to agree or disagree."
       group_setup:
-        group_description: "What is the purpose of your group?"
         discussion_title: "What is the topic you would like to discuss?"
-        discussion_description: "Introduce the topic and give enough context for your group to have a well-informed discussion."
-        motion_title: "Make this as clear and succinct as possible."
-        motion_description: "Give enough information so that anyone in your group can make a well-informed decision."
   helpers:
     submit:
+      group_setup:
+        create: "Finish setup"
       discussion:
         create: "Start discussion"
       motion:
@@ -497,7 +496,9 @@ en:
   message: "Message"
   name: "Name"
   new_activity: "New activity"
+  next: "Next"
   password: "Password"
+  prev: "Prev"
   options: "Options"
   save: "Save"
   saving: "Saving"
