--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -99,9 +99,15 @@ en:
         one:   "1 year"
         other: "%{count} years"
 
-  discussion_help_text: "This is the Discussion page. The discussion topic is at the top of the page, followed by background information and context.\n\n Discussion is on the left, to add a comment, write in the text box and click ‘Post comment’.\n\n Decisions are on the right. If you think the group is ready to make a decision, you can make a proposal for the group to consider. If someone has already made a proposal, you can see how the group feels on the pie graph, and state your position underneath.\n\n"
-  group_help_text: "This is the Group page for %{group_name}.\n\n Here you can see this group’s discussions, a description of what the group is for, You can start a discussion on a new topic by clicking on the ‘Start a discussion’ button.\n\n"
-  dashboard_help_text: "Welcome to Loomio!\n This is the Home page, where you can see a list of the discussions going on in all of your groups. To the right is a list of the groups you are a member of. You can start a discussion on a new topic by clicking on the “Start a discussion” button.\n\n If you have any questions or feedback we’d love to hear from you: %{link}\n\n"
+  discussion_help_text:
+    header: "Welcome to your first discussion"
+    message: "<p>The topic is at the top of the page, with context underneath.</p><p>Discussion is on the left: to add a comment, write in the text box and click ‘Post comment’.</p><p>Decisions are on the right. If you think the group is ready to make a decision, you can make a proposal for the group to consider. Once a proposal has been created, the pie graph shows how the group feels about it. Click a decision button to state your position.</p>"
+  group_help_text:
+    header: "Welcome to your new group!"
+    message: "<p>Invitations have successfully been sent to [these people - scrolling text box].</p><p>This is the “group page”: on the left is a list of all your discussions,</p><p>When you want the group to discuss another topic, start a new discussion.</p><p>Over on the right is the list of group members. Click ‘Add new member’ when you’re ready to send out more invitations.</p>"
+  dashboard_help_text:
+    header: "Welcome to your Home page"
+    message: "<p>The home page shows you all of the current discussions in all your groups.</p><p>To the right is a list of the groups you are a member of.</p><p>You can start a discussion on a new topic by clicking the “Start a discussion” button.</p>"
 
   notifications:
     header: "Notifications"
@@ -500,6 +506,7 @@ en:
   password: "Password"
   prev: "Prev"
   options: "Options"
+  ok_got_it: "Okay, got it!"
   save: "Save"
   saving: "Saving"
   sending: "Sending"
